[FIX]: removed grayed out scrollbar.

--- a/src/main.css
+++ b/src/main.css
@@ -3,3 +3,7 @@
 @tailwind components;
 
 @tailwind utilities;
+
+html {
+  overflow-y: hidden;
+}
